--- a/frontend/styles/bar.css
+++ b/frontend/styles/bar.css
@@ -4,8 +4,6 @@
 }
 
 .bar_buttons {
-    border: dotted;
-    border-color: #ffffff;
     text-align: center;
 }
 
@@ -15,20 +13,25 @@
     border-radius: 10px;
 }
 
-.receipt_div {
-    text-align: center;
-    margin-left: 70px; 
-}
-.receipt_button {
-    margin-top: 10px;
-    margin-bottom: 10px;
-    margin-left: 10px;
-    border-radius: 10px;
-    width: 220px;
-}
 .report_button {
-    margin-top: 10px;
-    margin-bottom: 10px;
-    margin-left: 10px;
-    border-radius: 10px;
+    margin-top: -10px;
+}
+
+.menu_drop_down {
+    visibility: hidden;
+    position: absolute;
+    top: 60px;
+    right: 95px;
+}
+
+@media only screen and (max-width: 1300px) {
+    .bar_button {
+        width: 100%;
+    }
+}
+
+@media only screen and (max-width: 1050px) {
+    .menu_drop_down {
+        visibility: visible;
+    }
 }
