--- a/frontend/styles/index.css
+++ b/frontend/styles/index.css
@@ -36,3 +36,13 @@
 .modal_buttons {
     border-radius: 10px;
 }
+
+@media only screen and (max-width: 1050px) {
+    .right-side {
+        display: none;
+        width: 0%;
+    }
+    .left-side {
+        width: 100%;
+    }
+}
