--- a/frontend/styles/main.css
+++ b/frontend/styles/main.css
@@ -1,5 +1,5 @@
 .root_index {
-    margin: 100px;
+    margin: 100px 100px 0 100px;
     width: 500px;
     display: flex;
     justify-content: center;
